--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,14 +1,39 @@
-.header { 
-    background-color: #fff;
-    padding: 10px 0;
+.header{ 
+    max-width: 1280px;
     display: flex;
-    justify-content: center;
-
-   
+    gap: 20px;
+    padding: 34px 80px 20px;
+    border-bottom-style: solid;
 }
-.header_logo {
-width: 94px;
-height: 26px;
+.header__avatar {
+    width: 190px;
+    height: 190px;
+   border-radius: 5px;
+     
+}
+
+.header__column{
+    width: 420px;
+    height: 190px;
+   
+
+
+}
+
+.header__name{
+    font-family: Poppins;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 32px;
+    margin: 0 0 12px;
+         
+}
+.header__description{
+    margin: 0;
+    font-family: Poppins;
+font-size: 16px;
+font-weight: 500;
+line-height: 16px;
 
 
 }
