--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,12 @@
 .page {
-    background-color: #FCF5E5;
-    min-height: 100vh;
+  background-color: #fcf5e5;
+  min-height: 100vh;
+  padding: 0 80px 0;
+  margin: auto;
+  
+}
+
+.page__centering {
+  max-width: 1280px;
+  margin: auto
 }
