--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,8 @@
 @import url(../vendor/normalize.css);
-@import url(../blocks/menubar.css);
-@import url(../blocks/header.css);
+@import url(../blocks/banner.css);
+@import url(../blocks/profile.css);
 @import url(../blocks/content.css);
 @import url(../blocks/footer.css);
 @import url(../blocks/page.css);
+@import url(../blocks/fonts.css);
+@import url(../blocks/cards.css);
