--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,12 +1,20 @@
 .page {
   background-color: #fcf5e5;
   min-height: 100vh;
-  padding: 0 80px 0;
+  padding: 0 80px 60px;
   margin: auto;
+  
   
 }
 
 .page__centering {
   max-width: 1280px;
   margin: auto
+}
+@media screen and (max-width: 627px) {
+    .page {
+        padding:20px 16px 20px;
+    }
+
+
 }
