--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,8 @@
 .profile {
-display: flex;
+  display: flex;
   padding: 34px 0 20px 0;
   border-bottom: 1px #212121 solid;
+  max-width: 1280px;
 }
 .profile__avatar {
   width: 190px;
@@ -13,12 +14,11 @@ display: flex;
 .profile__column {
   display: flex;
   flex-direction: column;
-  width: 420px;
-  height: 190px;
+  max-width: 420px;
 }
 
 .profile__name {
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-size: 32px;
   font-weight: 500;
   line-height: 32px;
@@ -26,16 +26,28 @@ display: flex;
 }
 .profile__description {
   margin: 0;
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
+  opacity: 70%;
 }
 .profile__edit-btn {
   margin-top: auto;
-  width: 107px;
+  /* width: 107px; */
   height: 16px;
   gap: 8px;
+  border: none;
+  background-color: #fcf5e5;
+  opacity: 70%;
+}
+
+.profile__edit-btn:hover {
+  opacity: 1; 
+}
+
+.profile__edit-btn_icon {
+  margin-right: 8px;
 }
 
 .profile__add-btn {
@@ -43,7 +55,7 @@ display: flex;
   color: white;
   width: 149px;
   height: 52px;
-  padding: 18px 32px 18px 32px;
+  /* padding: 18px 32px 18px 32px; */
   border-radius: 8px;
   font-family: Poppins;
   font-size: 16px;
@@ -51,9 +63,54 @@ display: flex;
   line-height: 16px;
   margin-left: auto;
   margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.profile__add-btn:hover {
+  opacity: 0.7; 
 }
 .profile__add-btn_cross {
   width: 12px;
   height: 12px;
   margin: 2px 8px 2px 0;
+}
+
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    /* max-width: 288px; */
+    align-items: center;
+  }
+  .profile__avatar {
+    margin-right: 0;
+    height: 80px;
+    width: 80px;
+    margin-bottom: 12px;
+  }
+  .profile__column {
+    text-align: center;
+    align-items: center;
+  }
+  .profile__name {
+    margin-bottom: 6px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+  .profile__description {
+    margin-bottom: 32px;
+    font-size: 16px;
+    line-height: 16px;
+  
+  }
+
+  .profile__edit-btn {
+    margin-bottom: 20px;
+  }
+
+  .profile__add-btn {
+    margin: auto;
+    min-width: 100%;
+  }
 }
