--- a/pages/index.css
+++ b/pages/index.css
@@ -4,5 +4,5 @@
 @import url(../blocks/content.css);
 @import url(../blocks/footer.css);
 @import url(../blocks/page.css);
-@import url(../blocks/fonts.css);
+@import url(../vendor/fonts.css);
 @import url(../blocks/cards.css);
