--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -16,7 +16,7 @@
 }
 
 .card_image {
-  width: 413px;
+  width: 100%;
   height: 413px;
   border-radius: 5px;
   display: block;
@@ -31,6 +31,9 @@
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-size: 20px;
   line-height: 24px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .card__like-btn {
   width: 23px;
@@ -40,22 +43,21 @@
   opacity: 40%;
 }
 .card__like-btn:hover {
-    opacity: 1; 
+  opacity: 1;
 }
 @media screen and (max-width: 627px) {
-
-    .cards__list {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        align-items: center;
-        gap:20px; 
-    
-    }
-
-
-
-
-
-
+  .cards__list {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    align-items: center;
+    gap: 20px;
+  }
+  .card {
+    width: 288px;
+    height: 318px;
+  }
+  .card_image {
+    height: 288px;
+  }
 }
