--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,6 +23,12 @@
   font-weight: 500;
   line-height: 32px;
   margin: 0 0 12px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 288px;
 }
 .profile__description {
   margin: 0;
@@ -33,7 +39,9 @@
   opacity: 70%;
 }
 .profile__edit-btn {
-  margin-top: auto;
+  margin: auto auto 0 0 ;
+  
+  ;
   /* width: 107px; */
   height: 16px;
   gap: 8px;
@@ -92,25 +100,27 @@
   .profile__column {
     text-align: center;
     align-items: center;
+    margin-bottom: 20px;
+    max-width: 288px;
   }
   .profile__name {
     margin-bottom: 6px;
     font-size: 20px;
     line-height: 20px;
-  }
+  
+ }
   .profile__description {
     margin-bottom: 32px;
     font-size: 16px;
     line-height: 16px;
   
   }
-
   .profile__edit-btn {
-    margin-bottom: 20px;
+    margin: auto;
   }
 
   .profile__add-btn {
     margin: auto;
-    min-width: 100%;
+    min-width: 288px;
   }
 }
