--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,13 +1,8 @@
-.card {
-  width: 413px;
-  height: 445px;
-}
 .cards__list {
   max-width: 1280px;
   display: grid;
   grid-template-columns: repeat(auto-fill, 413px);
   justify-content: center;
-
   gap: 40px 20px;
   margin: 0;
   border-bottom: 1px #212121 solid;
@@ -15,11 +10,11 @@
   list-style-type: none;
 }
 
-.card_image {
+.card__image {
   width: 100%;
   height: 413px;
-  border-radius: 5px;
-  display: block;
+  border-radius: 8px;
+  object-fit: cover;
 }
 .card__content {
   display: flex;
@@ -30,6 +25,7 @@
   margin: 0;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-size: 20px;
+  font-weight: 500;
   line-height: 24px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -38,9 +34,10 @@
 .card__like-btn {
   width: 23px;
   height: 20px;
-  background-image: url(../images/Like\ Icon.svg);
+  background-image: url(../images/Union.svg);
   border: none;
   opacity: 40%;
+  cursor: pointer;
 }
 .card__like-btn:hover {
   opacity: 1;
@@ -54,10 +51,10 @@
     gap: 20px;
   }
   .card {
-    width: 288px;
-    height: 318px;
+    max-width: 288px;
+    min-height: 318px;
   }
   .card_image {
-    height: 288px;
+    min-height: 288px;
   }
 }
