--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,9 +1,9 @@
-.footer__text{
-    font-family: Poppins;
-font-size: 16px;
-font-weight: 400;
-line-height: 16px;
-text-align: center;
-margin: 60px 0 60px;
-opacity: 70%;
+.footer__text {
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  text-align: center;
+  margin: 60px 0 60px;
+  opacity: 70%;
 }
