--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -6,8 +6,9 @@
 }
 .profile__avatar {
   width: 190px;
+  object-fit: cover;
   height: 190px;
-  border-radius: 5px;
+  border-radius: 8px;
   margin-right: 20px;
 }
 
@@ -28,7 +29,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  max-width: 288px;
+  max-width: 420px;
 }
 .profile__description {
   margin: 0;
@@ -37,11 +38,16 @@
   font-weight: 500;
   line-height: 16px;
   opacity: 70%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 .profile__edit-btn {
-  margin: auto auto 0 0 ;
-  
-  ;
+  margin: auto auto 0 0;
+
   /* width: 107px; */
   height: 16px;
   gap: 8px;
@@ -51,10 +57,11 @@
 }
 
 .profile__edit-btn:hover {
-  opacity: 1; 
+  opacity: 1;
+  cursor: pointer;
 }
 
-.profile__edit-btn_icon {
+.profile__edit-btn-icon {
   margin-right: 8px;
 }
 
@@ -65,7 +72,7 @@
   height: 52px;
   /* padding: 18px 32px 18px 32px; */
   border-radius: 8px;
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
@@ -76,14 +83,14 @@
   align-items: center;
 }
 .profile__add-btn:hover {
-  opacity: 0.7; 
+  opacity: 0.8;
+  cursor: pointer;
 }
-.profile__add-btn_cross {
+.profile__add-btn-cross {
   width: 12px;
   height: 12px;
   margin: 2px 8px 2px 0;
 }
-
 
 @media screen and (max-width: 627px) {
   .profile {
@@ -107,13 +114,11 @@
     margin-bottom: 6px;
     font-size: 20px;
     line-height: 20px;
-  
- }
+  }
   .profile__description {
     margin-bottom: 32px;
     font-size: 16px;
     line-height: 16px;
-  
   }
   .profile__edit-btn {
     margin: auto;
