--- a/blocks/card.css
+++ b/blocks/card.css
@@ -2,3 +2,58 @@
   max-width: 413px;
   min-height: 445px;
 }
+
+.card__image {
+  width: 100%;
+  height: 413px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+.card__content {
+  display: flex;
+  justify-content: space-between;
+  margin: 12px 0 0;
+}
+.card__description {
+  max-width: 350px;
+  margin: 0;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.card__like-btn {
+  width: 23px;
+  height: 20px;
+  background-image: url(../images/Union.svg);
+  border: none;
+  opacity: 40%;
+  cursor: pointer;
+}
+.card__like-btn:hover {
+  opacity: 1;
+}
+@media screen and (max-width: 627px) {
+  .cards__list {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    align-items: center;
+    gap: 20px;
+  }
+  .card {
+    max-width: 288px;
+    min-height: 318px;
+  }
+  .card__image {
+    height: 288px;
+    width: 288px;
+  }
+  .card__title{
+    max-width: 250px;
+  }
+
+}
