--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,5 @@
 .page {
+  max-width: 1440px;
   background-color: #fcf5e5;
   min-height: 100vh;
   padding: 0 80px 60px;
@@ -14,7 +15,7 @@
 }
 @media screen and (max-width: 627px) {
     .page {
-        padding:20px 16px 20px;
+        padding: 0;
     }
 
 
