--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,7 +2,7 @@
   max-width: 1440px;
   background-color: #fcf5e5;
   min-height: 100vh;
-  padding: 0 80px 60px;
+  padding: 0 80px 0;
   margin: auto;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   
