--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,7 @@
 .profile {
   display: flex;
   padding: 34px 0 20px 0;
-  border-bottom: 1px #212121 solid;
+  border-bottom: 1px #21212166 solid;
   max-width: 1280px;
 }
 .profile__avatar {
@@ -48,6 +48,8 @@
 .profile__edit-btn {
   margin: auto auto 0 0;
   height: 16px;
+  color: 212121;
+  font-weight: 500;
   gap: 8px;
   border: none;
   background-color: #fcf5e5;
