--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,18 +1,18 @@
 .page {
-  max-width: 1440px;
   background-color: #fcf5e5;
   min-height: 100vh;
-  padding: 0 80px 0;
-  margin: auto;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   
   
 }
 
-.page__centering {
+.page__section{
   max-width: 1280px;
-  margin: auto
+  width: 100%;
+  margin: 0 auto
 }
+
+
 @media screen and (max-width: 627px) {
     .page {
         padding: 0;
