--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -95,6 +95,10 @@
   .profile {
     flex-direction: column;
     align-items: center;
+    max-width: 320px;
+    margin: auto;
+    padding: 20px ;
+    box-sizing: border-box;
   }
   .profile__avatar {
     margin-right: 0;
@@ -120,10 +124,13 @@
   }
   .profile__edit-btn {
     margin: auto;
+    max-width: 288px;
   }
 
   .profile__add-btn {
-    margin: auto;
+    margin: 0;
+    padding: 0;
     min-width: 288px;
+    
   }
 }
