--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -10,6 +10,7 @@
   gap: 40px 20px;
   padding: 20px 0 40px;
   list-style-type: none;
+  margin: 0
 }
 @media screen and (max-width: 627px) {
   .cards__list {
@@ -18,6 +19,7 @@
     margin: 0;
     align-items: center;
     gap: 20px;
+    padding-bottom: 20px;
    
   }
   
