--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,7 @@
 .profile {
   display: flex;
   padding: 34px 0 20px 0;
-  border-bottom: 1px #21212166 solid;
+  border-bottom: 1px #212121 solid;
   max-width: 1280px;
 }
 .profile__avatar {
@@ -23,6 +23,7 @@
   font-size: 32px;
   font-weight: 500;
   line-height: 32px;
+  color: #212121;
   margin: 0 0 12px;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -37,6 +38,7 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
+  color: #212121;
   opacity: 70%;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -48,7 +50,7 @@
 .profile__edit-btn {
   margin: auto auto 0 0;
   height: 16px;
-  color: 212121;
+  color:#212121;
   font-weight: 500;
   gap: 8px;
   border: none;
