--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -21,7 +21,7 @@
   background: #fff;
   max-width: 730px;
   width: 100%;
-    border-radius: 8px;
+  border-radius: 8px;
   position: relative;
   box-sizing: border-box;
 }
@@ -41,6 +41,10 @@
 }
 .modal__title {
   margin: 0 0 32px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 32px;
 }
 
 .modal__label {
@@ -48,6 +52,11 @@
   flex-direction: column;
   gap: 8px;
   margin-bottom: 32px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 17.6px;
+  opacity: 0.7;
 }
 
 .modal__input {
