--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   visibility: hidden;
+  padding: 0 16px;
 }
 
 .modal__opened {
@@ -66,14 +67,51 @@
   border-radius: 8px;
   border: 1px solid;
   box-sizing: border-box;
+  opacity: 0.4;
 }
+.modal__input:hover {
+cursor: pointer;
+opacity: 1;
+} 
+
 .modal__submit-btn {
   width: 156px;
   padding: 18px 32px 18px 32px;
   border-radius: 8px;
   opacity: 0px;
-  margin-top: 32px;
+ 
   background-color: #212121;
   color: white;
   border: none;
+}
+
+@media screen and (max-width: 627px) {
+  .modal {
+    padding: 0 10px;
+  }
+
+.modal__container {
+  padding: 12px;
+  max-width: 300px;
+}
+.modal__close-btn {
+  top: 12px;
+  right: 12px;
+}
+.modal__title {
+  font-size: 20px;
+  line-height: 20px;
+  width: 106px;
+  height: 20px;
+  margin: 10px 0 24px;
+}
+
+.modal__label{
+  margin-bottom: 24px;
+}
+
+.modal__submit-btn {
+width: 100%;
+
+}
 }
