--- a/blocks/card.css
+++ b/blocks/card.css
@@ -30,6 +30,7 @@
   width: 23px;
   height: 20px;
   background-image: url(../images/Union.svg);
+  background-color: #fcf5e5;
   border: none;
   opacity: 40%;
   cursor: pointer;
