--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -13,7 +13,7 @@
   padding: 0 16px;
 }
 
-.modal__opened {
+.modal_opened {
   visibility: visible;
 }
 
@@ -28,6 +28,7 @@
 }
 .modal__close-btn {
   background-image: url("../images/close-btn.svg");
+  background-color: #fff;
   position: absolute;
   height: 40px;
   width: 40px;
@@ -35,10 +36,12 @@
   right: 50px;
   opacity: 0.4;
   border-style: none;
+  cursor: pointer;
 }
 
 .modal__close-btn:hover {
   opacity: 1;
+  cursor: pointer;
 }
 .modal__title {
   margin: 0 0 32px;
@@ -70,16 +73,16 @@
   opacity: 0.4;
 }
 .modal__input:hover {
-cursor: pointer;
-opacity: 1;
-} 
+  cursor: pointer;
+  opacity: 1;
+}
 
 .modal__submit-btn {
   width: 156px;
   padding: 18px 32px 18px 32px;
   border-radius: 8px;
   opacity: 0px;
- 
+  cursor: pointer;
   background-color: #212121;
   color: white;
   border: none;
@@ -90,28 +93,27 @@ opacity: 1;
     padding: 0 10px;
   }
 
-.modal__container {
-  padding: 12px;
-  max-width: 300px;
-}
-.modal__close-btn {
-  top: 12px;
-  right: 12px;
-}
-.modal__title {
-  font-size: 20px;
-  line-height: 20px;
-  width: 106px;
-  height: 20px;
-  margin: 10px 0 24px;
-}
+  .modal__container {
+    padding: 12px;
+    max-width: 300px;
+  }
+  .modal__close-btn {
+    top: 12px;
+    right: 12px;
+  }
+  .modal__title {
+    font-size: 20px;
+    line-height: 20px;
+    width: 106px;
+    height: 20px;
+    margin: 10px 0 24px;
+  }
 
-.modal__label{
-  margin-bottom: 24px;
-}
+  .modal__label {
+    margin-bottom: 24px;
+  }
 
-.modal__submit-btn {
-width: 100%;
-
-}
+  .modal__submit-btn {
+    width: 100%;
+  }
 }
