--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -42,7 +42,6 @@
 .modal__close-btn:hover {
   opacity: 1;
   cursor: pointer;
-
 }
 .modal__close-btn_type_preview {
   background-image: url(../images/close-btn__preveiw.svg);
@@ -135,8 +134,6 @@
   margin: 0;
 }
 
-
-
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
@@ -164,5 +161,44 @@
 
   .modal__submit-btn {
     width: 100%;
+  }
+  .modal__image {
+    max-width: 100%;
+    border-radius: 8px;
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .modal__caption {
+    font-family: Poppins, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19.2px;
+  }
+
+  .modal__content {
+    padding: 12px;
+  }
+
+  .modal__content_type_preview {
+    padding: 0;
+  }
+
+  .modal__close-button_type_preview {
+    background-image: url(../images/modal_close.png);
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: -38px;
+    right: 0;
+    opacity: 1;
+  }
+
+  .modal__close-button_type_preview:hover {
+    background-image: url(../images/modal_close-hover.png);
+    cursor: pointer;
+    transition: cursor 2s;
+    opacity: 0.4;
   }
 }
