--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,6 +11,7 @@
   justify-content: center;
   visibility: hidden;
   padding: 0 16px;
+  transition: visibility 0.3s, opacity 0.3s ease-in;
 }
 
 .modal_opened {
@@ -144,8 +145,9 @@
     max-width: 300px;
   }
   .modal__close-btn {
-    top: 12px;
-    right: 12px;
+    top: -45px;
+    right: 1px;
+
   }
   .modal__title {
     font-size: 20px;
