--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,13 +12,14 @@
   visibility: hidden;
   padding: 0 16px;
   opacity:0;
+  transition: opacity 1s linear;
   
   
 }
 
 .modal_opened {
   visibility: visible;
-  transition: visibility 0s linear 0.5s,opacity 0.5s linear;
+  transition: opacity 1s linear;
   opacity:1;
 
 }
