--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -12,14 +12,11 @@
   visibility: hidden;
   padding: 0 16px;
   opacity:0;
-  transition: opacity 1s linear;
-  
-  
+  transition: opacity 0.5s linear, visibility 0.5s  linear;
 }
 
 .modal_opened {
   visibility: visible;
-  transition: opacity 1s linear;
   opacity:1;
 
 }
@@ -127,7 +124,8 @@
   width: fit-content;
   height: fit-content;
   margin: 0;
-  top: 8px;
+  bottom: -25px;
+  position: absolute;
   border-radius: 8px;
   background-color: #212121;
 }
@@ -151,7 +149,7 @@
     max-width: 300px;
   }
   .modal__close-btn {
-    top: 20px;
+    top: -40px;
     right: 1px;
 
   }
@@ -183,6 +181,8 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 19.2px;
+    bottom:8px;
+   
   }
 
   .modal__content {
@@ -198,8 +198,8 @@
     width: 40px;
     height: 40px;
     position: absolute;
-    top: -38px;
-    right: 0;
+    top: 60px;
+    
     opacity: 1;
   }
 
