--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -89,6 +89,9 @@
   cursor: pointer;
   opacity: 1;
 }
+.modal__input_type_error {
+  border: 1px solid #ff000099;
+}
 
 .modal__error {
   font-family: Poppins;
@@ -97,8 +100,6 @@
   line-height: 17.6px;
   color: #ff0000;
   opacity: 70;
-  
-  
 }
 
 .modal__submit-btn {
@@ -110,6 +111,19 @@
   background-color: #212121;
   color: white;
   border: none;
+}
+
+.modal__submit-btn_disabled {
+  width: 156;
+  height: 52;
+  opacity: 0.5;
+  border-radius: 8px;
+  padding-top: 18px;
+  padding-right: 32px;
+  padding-bottom: 18px;
+  padding-left: 32px;
+  gap: 8px;
+  background: #212121;
 }
 .modal__content {
   background-color: #fff;
